pods.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minerva-mcgonagall
  namespace: professors
spec:
  selector:
    matchLabels:
      owner: minerva-mcgonagall
      purpose: demo
  replicas: 1
  template:
    metadata:
      labels:
        owner: minerva-mcgonagall
        purpose: demo
    spec:
      containers:
        - name: minerva-mcgonagall-client
          image: registry.k8s.io/e2e-test-images/agnhost:2.43
        - name: minerva-mcgonagall-80
          image: registry.k8s.io/e2e-test-images/agnhost:2.43
          command: ["/bin/bash", "-c", "/agnhost serve-hostname --tcp --http=false --port 80"]
        - name: minerva-mcgonagall-8080
          image: registry.k8s.io/e2e-test-images/agnhost:2.43
          command: ["/bin/bash", "-c", "/agnhost serve-hostname --tcp --http=false --port 8080"]
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: harry-potter
  namespace: gryffindor
spec:
  selector:
    matchLabels:
      owner: harry-potter
      purpose: demo
  replicas: 2
  template:
    metadata:
      labels:
        owner: harry-potter
        purpose: demo
    spec:
      containers:
        - name: harry-potter-client
          image: registry.k8s.io/e2e-test-images/agnhost:2.43
        - name: harry-potter-80
          image: registry.k8s.io/e2e-test-images/agnhost:2.43
          command: ["/bin/bash", "-c", "/agnhost serve-hostname --tcp --http=false --port 80"]
        - name: harry-potter-8080
          image: registry.k8s.io/e2e-test-images/agnhost:2.43
          command: ["/bin/bash", "-c", "/agnhost serve-hostname --tcp --http=false --port 8080"]
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: draco-malfoy
  namespace: slytherin
spec:
  selector:
    matchLabels:
      owner: draco-malfoy
      purpose: demo
  replicas: 2
  template:
    metadata:
      labels:
        owner: draco-malfoy
        purpose: demo
    spec:
      containers:
        - name: draco-malfoy-client
          image: registry.k8s.io/e2e-test-images/agnhost:2.43
        - name: draco-malfoy-80
          image: registry.k8s.io/e2e-test-images/agnhost:2.43
          command: ["/bin/bash", "-c", "/agnhost serve-hostname --tcp --http=false --port 80"]
        - name: draco-malfoy-8080
          image: registry.k8s.io/e2e-test-images/agnhost:2.43
          command: ["/bin/bash", "-c", "/agnhost serve-hostname --tcp --http=false --port 8080"]
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: forbidden
  namespace: forbidden-forest
spec:
  selector:
    matchLabels:
      type: forbidden
      purpose: demo
  replicas: 1
  template:
    metadata:
      labels:
        type: forbidden
        purpose: demo
    spec:
      containers:
        - name: forbidden-client
          image: registry.k8s.io/e2e-test-images/agnhost:2.43
        - name: forbidden-80
          image: registry.k8s.io/e2e-test-images/agnhost:2.43
          command: ["/bin/bash", "-c", "/agnhost serve-hostname --tcp --http=false --port 80"]
        - name: forbidden-8080
          image: registry.k8s.io/e2e-test-images/agnhost:2.43
          command: ["/bin/bash", "-c", "/agnhost serve-hostname --tcp --http=false --port 8080"]
