anp-strong-allow.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: allow-ingress-from-professors-to-houses
spec:
  priority: 11
  subject:
    namespaces:
      matchExpressions:
        - {key: house, operator: In, values: [gryffindor, slytherin]}
  ingress:
  - name: "allow-all-ingress-from-professor-to-houses"
    action: "Allow"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: professors
