banp.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: BaselineAdminNetworkPolicy
metadata:
  name: default # singleton
spec:
  subject:
    namespaces:
      matchLabels:
          kubernetes.io/metadata.name: professors
  ingress:
  - name: "deny-all-ingress-to-professor"
    action: "Deny"
    from:
    - namespaces:
        namespaceSelector: {}
  egress:
  - name: "deny-all-egress-from-professor"
    action: "Deny"
    to:
    - namespaces:
        namespaceSelector: {}
