gryffindor-netpol-deny-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-ingress
  namespace: gryffindor
spec:
  podSelector:
  policyTypes:
    - Ingress
