pass-and-banp.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: pass-egress-from-professor-to-forbidden-forest
spec:
  priority: 2
  subject:
    namespaces:
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: professors
  egress:
  - action: "Pass"
    to:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: forbidden-forest
---
apiVersion: policy.networking.k8s.io/v1alpha1
kind: BaselineAdminNetworkPolicy
metadata:
  name: default # singleton
spec:
  subject:
    namespaces: {}
  egress:
  - action: "Deny"
    to:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: forbidden-forest
