professors-netpol-allow-egress-to-ff.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-forbidden-forrest
  namespace: professors
spec:
  podSelector:
  policyTypes:
    - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: forbidden-forest
